samples/_failures_safe/1761423846_f901c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fe11aa3d.c: In function ‘main’:
./samples/SAFE/__tmp_fe11aa3d.c:172:9: error: expected declaration or statement at end of input
  172 |         if (token.type == TOKEN_EOF) {
      |         ^~
./samples/SAFE/__tmp_fe11aa3d.c:172:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fe11aa3d.c:172:9: error: expected declaration or statement at end of input
